# ===================================================================
# CMAKE のおまじない
# ===================================================================


# ===================================================================
# プロジェクト名，バージョンの設定
# ===================================================================


# ===================================================================
# オプション
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# ヘッダファイルの生成
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================

include_directories (
  ${PROJECT_BINARY_DIR}/include
  ${PROJECT_SOURCE_DIR}/ym-common/include
  ${CMAKE_CURRENT_SOURCE_DIR}/include
  )


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( tests/gtest )


# ===================================================================
# コンフィグレーション依存のファイルの生成
# ===================================================================


# ===================================================================
#  ソースの設定
# ===================================================================

set ( alloc_SOURCES
  c++-src/Alloc.cc
  c++-src/FragAlloc.cc
  c++-src/SimpleAlloc.cc
  c++-src/UnitAlloc.cc
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================

ym_add_object_library ( ym_alloc
  ${alloc_SOURCES}
  )
